fixed spacing on banner and scroll in menu

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -50,13 +50,13 @@
 .banner__content_medium {
   font-family: karla;
   color: var(--tertiary);
-  font-size: 20px;
+  font-size: 18px;
   letter-spacing: 1px;
 }
 
 .banner__content_big {
   font-family: spectral;
-  font-size: 36px;
+  font-size: 30px;
   color: var(--base-dark);
 }
 
