--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -120,7 +120,7 @@ ul {
   bottom: 0;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: scroll;
   display: flex;
   align-items: center;
   justify-content: center;
